# mnproject-template

./: README.md  do-it  make-project  setup-env
default-project/: .gitignore  configure.ac  do-it  find-sources  setup-env
default-project/src/: Makefile.am  foo.c  gen-diag  main.c
default-project/src/test/: testfoo.c
default-project/test/: Makefile.freebsd  gendata.c  runscripts  testbar.c  testfoo.c  unittest.h
default-project/tools-env/: find-sources  mnversion-bump-build  mnversion-get
